--- a/src/components/Feed/index.css
+++ b/src/components/Feed/index.css
@@ -11,7 +11,7 @@
     top: 0;
     background-color: white;
     z-index: 100;
-    border: 1px solid var(--background-color);
+    border-bottom: 1px solid var(--background-color);
     padding: 15px 20px;
 }
 
