--- a/src/components/Signup/signupuser/index.css
+++ b/src/components/Signup/signupuser/index.css
@@ -5,7 +5,7 @@
     color: black;
 }
 
-.forms > .username,.password {
+.forms > .email,.password {
     display: block;
     padding: 15px;
     border: .5px solid black;
@@ -13,7 +13,7 @@
     margin: 10px;
 }
 
-.forms > .username > .user-input {
+.forms > .email > .user-input {
     border: none;
     outline: none;
     background: none;
