update widget ui

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   --twitter-color:#50b7f5;
   --background-color:#e6ecf0;
+  --hover-color: #f6f9f9;
   --twitter-font: 'Roboto', sans-serif;
 }
 
