--- a/src/components/Mainpage/Widget/index.css
+++ b/src/components/Mainpage/Widget/index.css
@@ -2,10 +2,10 @@
 /* rest of the styling will be done to the individual widget which is in the datafetcher.css */
 .widget {
     border-radius: 15px;
-    border-color: #14171a;
-    padding-left: 20px;
+    border-color: black;
+    padding-left: 30px;
     padding-right: 20px;
-    flex: .3;
+    flex: .30;
     background-color: white;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -13,20 +13,22 @@
 
 .blocks {
     border-radius: 15px;
-    background-color: var(--background-color);
+    background-color: var(--hover-color);
     border-bottom: 1px solid #e6ecf0;
-    padding: 10px;
     display: flex;
-    align-items: center;
 }
 
-
-.items > .whats-happening {
-    font-size: 15px;
+.items > .whats-happeneing {
+    font-size: 25px;
     font-weight: bold;
     color: #14171a;
+    padding-left: 10px;
 }
 
 .widget > .copyright-stuff {
-    font-size: 5px;
+    font-size: 10px;
+    margin-bottom: 10px;
+    color: #14171a;
+    padding-left: 10px;
+    padding-top: 5px;
 }
