--- a/src/components/Mainpage/Feed/post.css
+++ b/src/components/Mainpage/Feed/post.css
@@ -1,37 +1,33 @@
-
 /* index.css */
-.feedcontent {
-    margin: 0 auto;
-    max-width: 600px;
-    padding: 20px;
-  }
-
-  .post {
+/* styling for individual post */
+.post {
     background-color: #ffffff;
     border: 1px solid #e6ecf0;
     border-radius: 8px;
-    padding: 16px;
+    padding: 0px;
     margin-bottom: 16px;
   }
   
-  .post .display-name {
+  .display-name {
     font-size: 18px;
     font-weight: bold;
+    margin-bottom: 8px;
+    padding: 10px;
   }
   
-  .post .text {
+  h3 {
     font-size: 16px;
+    margin-bottom: 8px;
     font-weight: none;
-    margin-top: 8px;
+    padding: 10px;
+
   }
   
-  /* Example styles for avatar image, if applicable */
-  .post .avatar {
+  .profile-pic {
+    display: flex;
     width: 48px;
     height: 48px;
     border-radius: 50%;
     object-fit: cover;
-    margin-right: 16px;
   }
-  
   
