--- a/src/components/Mainpage/Widget/datafetcher.css
+++ b/src/components/Mainpage/Widget/datafetcher.css
@@ -3,11 +3,38 @@
     font-size: 13px;
     font-weight: 300;
     font-family: var(--twitter-font);
+    padding-left: 7px;
 }
 
 .title {
+    padding-left: 7px;
     color: #14171a;
     font-size: 15px;
     font-weight: bold;
     font-family: var(--twitter-font);
 }
+
+.block {
+    background-color: var(--hover-color);
+    align-items: center;
+}
+
+.block {
+/* Your existing styles */
+    cursor: pointer; /* Add cursor property to change cursor to pointer */
+    transition: var(--background-color) 0.3s ease;
+    pointer-events: auto; /* Ensure the block is clickable */
+}
+
+a.fill-div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
+
+
+.block:hover {
+    /* Styles for hover effect */
+    background-color: #dcdcdc; /* Change to the desired darker color */
+  }
