--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,6 @@ body {
 
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Cantarell',source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
