--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  --twitter-color:#50b7f5;
+  --twitter-color:#1c9bef;
   --background-color:#e6ecf0;
   --hover-color: #f6f9f9;
   --twitter-font: 'Roboto', sans-serif;
