--- a/src/components/Signup/index.css
+++ b/src/components/Signup/index.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f5f8fa;
+    background-color: white;
 }
 
 .register-main > .twitter-logo {
