--- a/src/components/Mainpage/Sidebar/index.css
+++ b/src/components/Mainpage/Sidebar/index.css
@@ -2,8 +2,8 @@
     border-right: 1px solid var(--background-color) !important;
     flex: .3;
     margin-top: 20px;
-    padding-left: 10px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 30px;
     min-width: 250px;
 }
 
@@ -15,7 +15,8 @@
     text-transform: inherit !important;
     border-radius: 30px !important;
     height: 50px !important;
-    margin-top: 20px !important;
+    margin-top: 10px !important;
+    position: relative;
 }
 
 .sidebar-twitterIcon {
