fixed border issue on entire border

--- a/src/components/Mainpage/Feed/index.css
+++ b/src/components/Mainpage/Feed/index.css
@@ -1,6 +1,7 @@
 .feed {
     flex: .4;
     border-right: 1px solid var(--background-color);
+    border-left: 1px solid var(--background-color);
     min-width: fit-content;
     overflow-y: scroll;
     scrollbar-width: none;
