clean up post ui

--- a/src/components/Mainpage/Feed/post.css
+++ b/src/components/Mainpage/Feed/post.css
@@ -2,10 +2,9 @@
 /* styling for individual post */
 .post {
     background-color: #ffffff;
-    border: 1px solid #e6ecf0;
-    border-radius: 8px;
     padding: 0px;
     margin-bottom: 16px;
+    border-bottom: 1px solid var(--background-color) ;
   }
   
   .display-name {
