--- a/src/components/Mainpage/Feed/post.css
+++ b/src/components/Mainpage/Feed/post.css
@@ -2,31 +2,30 @@
 /* styling for individual post */
 .post {
     background-color: #ffffff;
-    padding: 0px;
+    padding-bottom: 10px;
     margin-bottom: 16px;
     border-bottom: 1px solid var(--background-color) ;
+    font-family: Arial, sans-serif
   }
   
   .display-name {
-    font-size: 18px;
+    margin: 0 0 5px;
+    font-size: 16px;
     font-weight: bold;
-    margin-bottom: 8px;
-    padding: 10px;
   }
   
   h3 {
-    font-size: 16px;
+    margin: 5px 0 0 0;
+    font-size: 14px;
+    line-height: 1.3;
     margin-bottom: 8px;
-    font-weight: none;
+    font-weight: normal;
     padding: 10px;
-
   }
   
   .profile-pic {
-    display: flex;
-    width: 48px;
-    height: 48px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    object-fit: cover;
+    margin-right: 10px;
   }
-  
