--- a/src/components/Mainpage/Feed/post.css
+++ b/src/components/Mainpage/Feed/post.css
@@ -1,31 +1,77 @@
 /* index.css */
 /* styling for individual post */
+
 .post {
-    background-color: #ffffff;
-    padding-bottom: 10px;
-    margin-bottom: 16px;
-    border-bottom: 1px solid var(--background-color) ;
-    font-family: Arial, sans-serif
-  }
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--background-color) ;
+  display: flex;
+  align-items: flex-start;
+}
   
-  .display-name {
-    margin: 0 0 5px;
-    font-size: 16px;
-    font-weight: bold;
+.post-body > .image-container {
+  height: 400px;
+  width: 400px;
+  overflow: hidden;
+}
+
+.post-body > .image-container > img {
+  border-radius: 20px;
+  max-width: 100%;
+  max-height: 100%;
+
+}
+
+.post-body {
+  flex: 1;
+}
+.post-header-text > h3 {
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+
+.post-header-discription {
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+.post-footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+
+  .bubble:hover {
+    color: orange;
+    cursor: pointer;
   }
+  .retweet:hover {
+    color: var(--twitter-color);
+    cursor: pointer;
+  }
+  .pub:hover {
+    color: greenyellow;
+    cursor: pointer;
+  }
+  .favorite:hover {
+    color: red;
+    cursor: pointer;
+  }
+
   
-  h3 {
-    margin: 5px 0 0 0;
-    font-size: 14px;
-    line-height: 1.3;
-    margin-bottom: 8px;
-    font-weight: normal;
-    padding: 10px;
-  }
-  
-  .profile-pic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
+}
+
+.post-badge {
+  font-size: 14px !important;
+  color: var(--twitter-color) !important;
+  padding: 1px;
+}
+
+/* @username when we add it */
+/* .post__headerSpecial {
+  font-weight: 600;
+  font-size: 12px;
+  color: gray;
+} */
+
+.post-avatar {
+  padding: 10px;
+}
