--- a/src/components/Mainpage/Feed/post.css
+++ b/src/components/Mainpage/Feed/post.css
@@ -24,6 +24,7 @@
 .post-body {
   flex: 1;
 }
+
 .post-header-text > h3 {
   font-size: 15px;
   margin-bottom: 5px;
@@ -38,39 +39,33 @@
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+}
 
-  .bubble:hover {
-    color: orange;
-    cursor: pointer;
-  }
-  .retweet:hover {
-    color: var(--twitter-color);
-    cursor: pointer;
-  }
-  .pub:hover {
-    color: greenyellow;
-    cursor: pointer;
-  }
-  .favorite:hover {
-    color: red;
-    cursor: pointer;
-  }
+.bubble:hover {
+  color: orange;
+  cursor: pointer;
+}
 
-  
+.retweet:hover {
+  color: var(--twitter-color);
+  cursor: pointer;
+}
+
+.pub:hover {
+  color: greenyellow;
+  cursor: pointer;
+}
+
+.favorite:hover {
+  color: red;
+  cursor: pointer;
 }
 
 .post-badge {
   font-size: 14px !important;
-  color: var(--twitter-color) !important;
+  color: orange !important;
   padding: 1px;
 }
-
-/* @username when we add it */
-/* .post__headerSpecial {
-  font-weight: 600;
-  font-size: 12px;
-  color: gray;
-} */
 
 .post-avatar {
   padding: 10px;
