--- a/src/components/Mainpage/Sidebar/index.css
+++ b/src/components/Mainpage/Sidebar/index.css
@@ -3,7 +3,7 @@
     margin-top: 10px;
     padding-left: 0px;
     padding-right: 30px;
-    min-width: 250px;
+    min-width: 220px;
 }
 
 .sidebar-button {
@@ -12,7 +12,7 @@
     border: none !important;
     font-weight: 900 !important;
     text-transform: inherit !important;
-    border-radius: 30px !important;
+    border-radius: 40px !important;
     height: 50px !important;
     margin-top: 10px !important;
     position: relative;
@@ -21,14 +21,16 @@
 .sidebar-twitterIcon {
     font-size: 30px !important;
     color: var(--twitter-color);
-    margin-left: 20px;
-    padding-left: 10px;
-    padding-right: 20px;
-    margin-bottom: 20px;
+    margin-left: 8px;
+    padding: 10px;
+    align-items: left;
     cursor: pointer;
 }
 
 .sidebar-twitterIcon:hover {
     color: var(--twitter-color) !important;
-    transition: color 100ms ease-out !important;
+    background-color: var(--background-color);
+    border-radius: 90%;
+    color: black;
+    transition: color 100ms ease-out;
 }
