--- a/src/components/Mainpage/Sidebar/sidebar_components.css
+++ b/src/components/Mainpage/Sidebar/sidebar_components.css
@@ -1,14 +1,14 @@
-.sidebar-options{
+.sidebar-options {
     display: flex;
-    padding: 10px;
+    padding: 8px;
     align-items: center;
     cursor: pointer;
 }
 
 .sidebar-options:hover {
-    background-color: #f5f8fa;
-    border-radius: 30px;
-    color: var(--twitter-color);
+    background-color: var(--background-color);
+    border-radius: 40px;
+    color: black;
     transition: color 100ms ease-out;
 }
 
@@ -20,4 +20,9 @@
 .sidebar-options > h2{
     font-size: 20px;
     margin-right: 20px;
+    font-weight: normal;
+}
+
+.icon {
+    align-items: left;
 }
