--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@ body {
   --background-color:#e6ecf0;
   --hover-color: #f6f9f9;
   --twitter-font: 'Roboto', sans-serif;
+  /* Add a prameter for twitter chirp font */
 }
 
-.app{
+.app {
   display: flex;
   height: 100vh;
   max-width: 1100px;
   margin-left: auto;
-  margin-right: auto;
-  padding: 0 10px;
+  margin-right: 110px;
 }
