--- a/src/components/Mainpage/Widget/datafetcher.css
+++ b/src/components/Mainpage/Widget/datafetcher.css
@@ -1,13 +1,17 @@
+.widget-wrapper {
+    padding-left: 14px;
+}
+
 .type {
+    margin-top: 5px;
     color: #657786;
     font-size: 13px;
     font-weight: 300;
     font-family: var(--twitter-font);
-    padding-left: 7px;
+    padding-left: 14px;
 }
 
 .title {
-    padding-left: 7px;
     color: #14171a;
     font-size: 15px;
     font-weight: bold;
@@ -15,11 +19,13 @@
 }
 
 a:link {
+    color: black;
     text-decoration: none;
 }
 
 a:visited {
     text-decoration: none;
+    color: black;
 }
 
 a:hover {
