--- a/src/components/Mainpage/Widget/index.css
+++ b/src/components/Mainpage/Widget/index.css
@@ -1,5 +1,3 @@
-/*here is going to be that entire gray box that is the twitter widget, whats happeing in the only stlyeling besides the gray box*/
-/* rest of the styling will be done to the individual widget which is in the datafetcher.css */
 .widget {
     border-radius: 15px;
     border-color: black;
@@ -16,7 +14,6 @@
     border-radius: 15px;
     background-color: var(--hover-color);
     border-bottom: 1px solid #e6ecf0;
-    display: flex;
 }
 
 .items > .whats-happeneing {
@@ -28,9 +25,10 @@
 }
 
 .widget > .copyright-stuff {
-    font-size: 10px;
+    font: var(--twitter-font);
+    font-size: 13px;
     margin-bottom: 10px;
-    color: #14171a;
+    color: black;
     padding-left: 15px;
     padding-top: 5px;
 }
@@ -38,11 +36,7 @@
 .see-more {
     padding: 15px;
     font-size: 15px;
-    font-weight: bold;
+    font-weight: none;
     color: var(--twitter-color);
     padding-left: 15px;
-}
-
-.widget > .search-bar {
-    padding: 10px;
 }
