--- a/src/components/Mainpage/Widget/datafetcher.css
+++ b/src/components/Mainpage/Widget/datafetcher.css
@@ -2,21 +2,24 @@
     padding-left: 14px;
 }
 
+.widget-wrapper:hover{
+    background-color: var(--background-color);
+}
+
 .type {
-    margin-top: 15px;
     color: #657786;
     font-size: 13px;
     font-weight: 300;
-    font-family: var(--twitter-font);
-    padding-left: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .title {
     color: #14171a;
     font-size: 15px;
     font-weight: bold;
-    font-family: var(--twitter-font);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-right: 5px;
+    margin-bottom: 10px;
 }
 
 a:link {
