--- a/src/components/Mainpage/Widget/index.css
+++ b/src/components/Mainpage/Widget/index.css
@@ -20,7 +20,7 @@
 .items > .whats-happeneing {
     font-size: 20px;
     font-weight: bold;
-    font-family: var(--twitter-font);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #14171a;
     padding-left: 15px;
     padding-top: 7px;
@@ -35,7 +35,7 @@
     padding-top: 5px;
 }
 
-.see-more {
+.show-more {
     padding: 15px;
     font-size: 15px;
     font-weight: none;
