--- a/src/components/Mainpage/Widget/search.css
+++ b/src/components/Mainpage/Widget/search.css
@@ -10,7 +10,7 @@
     flex: .9;
 }
 .text-input {
-    font-family: var(--twitter-font);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     size: 14px;
     border-style: none;
     background: none;
