--- a/src/components/Mainpage/Sidebar/User Images/userComponent.css
+++ b/src/components/Mainpage/Sidebar/User Images/userComponent.css
@@ -1,17 +1,28 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+.user > .profile-pic {
+    font-size: small;
+    border-radius: 10px;
+    align-items: left;
+    width: 100%;
+    height: 100%;
 }
 
-.user > .info-bar > .profile-pic {
+.user {
+    margin-top: 430px;
+    height: 40px;
     display: flex;
-    border-radius: 15px;
-    border-style: solid;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 10px;
-    border-bottom: 1px solid var(--twitter-color);
+    cursor: pointer;
+}
+
+.user:hover {
+    background-color: var(--background-color);
+    border-radius: 40px;
+    color: black;
+    transition: color 100ms ease-out;
+}
+
+h2 {
+    font-size: 20px;
+    margin-right: 20px;
+    font-weight: normal;
 }
