--- a/src/components/Mainpage/Widget/index.css
+++ b/src/components/Mainpage/Widget/index.css
@@ -8,7 +8,7 @@
     margin-bottom: 20px;
     min-width: 350px;
     margin-top: 7px;
-    margin-right: auto;
+    margin-right: 150px;
 }
 
 .blocks {
