--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,12 @@ body {
   --background-color:#e6ecf0;
   --hover-color: #f6f9f9;
   --twitter-font: Segoe UI,'Roboto';
-  /* Add a prameter for twitter chirp font */
 }
 
 .app {
   display: flex;
   height: 100vh;
   max-width: 1100px;
-  margin-left: auto;
+  margin-left: 100px;
   margin-right: auto;
 }
