--- a/src/components/Mainpage/Feed/index.css
+++ b/src/components/Mainpage/Feed/index.css
@@ -9,12 +9,14 @@
 }
 
 .feed-header {
+    font-weight: bold;
+    width: 600px;
     position: sticky;
     top: 0;
     background-color: white;
     z-index: 100;
     border-bottom: 1px solid var(--background-color);
-    padding: 15px 20px;
+    padding: 15px;
 }
 
 .feed::-webkit-scrollbar {
