--- a/src/components/Signup/signupuser/index.css
+++ b/src/components/Signup/signupuser/index.css
@@ -6,7 +6,7 @@
     text-align: center;
 }
 
-.forms > .email,.password {
+.forms > .email,.password,.img {
     display: block;
     padding: 15px;
     border: .5px solid black;
@@ -23,6 +23,13 @@
 
 .forms > .password > .pass-input {
     border: none;
+    outline: none;
+    background: none;
+    font-size: 18px;
+}
+
+.forms > .img > .img__input {
+    border: none !important;
     outline: none;
     background: none;
     font-size: 18px;
